# lagoon

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  gen.py  lagoon.c  lagoon.h
include/: lagoon.h
tests/: CMakeLists.txt  test_is_store.c  test_label.c  test_load_immediate.c  test_smoke.c
